feat: fussion lazyvim + neovim

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-plugged/*
-autoload/plug.vim
+# neovim
+neovim/plugged/*
+neovim/autoload/plug.vim
+
+# lazyvim
+lazyvim/tt.*
+lazyvim/.tests
+lazyvim/doc/tags
+lazyvim/debug
+lazyvim/.repro
+lazyvim/foo.*
+lazyvim/*.log
+lazyvim/data
